--- a/example-dotnet/JRadius.Example.csproj
+++ b/example-dotnet/JRadius.Example.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\core-dotnet\JRadius.Core.csproj" />
+  </ItemGroup>
+
 </Project>
