--- a/server-dotnet/JRadius.Server.csproj
+++ b/server-dotnet/JRadius.Server.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\core-dotnet\JRadius.Core.csproj" />
+  </ItemGroup>
+
 </Project>
